// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BLOCKS|Tabs Conditional rendered Tabs 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c1 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  color: #007acc;
  cursor: pointer;
  font-size: 16px;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  display: inline-block;
  padding: 0 10px;
  border-radius: 100px;
  line-height: 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #333333;
  background: #fff0bf;
}

.c1 .icon-inherit-color {
  fill: #007acc;
}

.c1:hover {
  color: rgba(0,122,204,0.8);
}

.c1:hover .icon-inherit-color {
  fill: rgba(0,122,204,0.8);
}

.c1:hover {
  color: #333333;
}

.c1:focus {
  outline: none;
}

<div
  className="responsive c0"
>
  <div
    className="rc-tabs rc-tabs-top"
    style={Object {}}
  >
    <div
      className={null}
    >
      <span
        className="c1"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        1. Бронирование
      </span>
    </div>
    <div
      className="rc-tabs-content rc-tabs-content-no-animated"
    >
      <div
        aria-hidden="false"
        className="rc-tabs-tabpane rc-tabs-tabpane-active"
        role="tabpanel"
      >
        First tab
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BLOCKS|Tabs Styled Tabs 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c1 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  color: #007acc;
  cursor: pointer;
  font-size: 16px;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  display: inline-block;
  padding: 0 10px;
  border-radius: 100px;
  line-height: 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: transparent;
}

.c1 .icon-inherit-color {
  fill: #007acc;
}

.c1:hover {
  color: rgba(0,122,204,0.8);
}

.c1:hover .icon-inherit-color {
  fill: rgba(0,122,204,0.8);
}

.c1:focus {
  outline: none;
}

.c2 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  color: #007acc;
  cursor: pointer;
  font-size: 16px;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  display: inline-block;
  padding: 0 10px;
  border-radius: 100px;
  line-height: 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #333333;
  background: #fff0bf;
}

.c2 .icon-inherit-color {
  fill: #007acc;
}

.c2:hover {
  color: rgba(0,122,204,0.8);
}

.c2:hover .icon-inherit-color {
  fill: rgba(0,122,204,0.8);
}

.c2:hover {
  color: #333333;
}

.c2:focus {
  outline: none;
}

<div
  className="responsive c0"
>
  <div
    className="rc-tabs rc-tabs-top"
    style={Object {}}
  >
    <div
      className={null}
    >
      <span
        className="c1"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        1. Бронирование
      </span>
      <span
        className="c2"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        2. Оплата
      </span>
      <span
        className="c1"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        3. Получение билета
      </span>
    </div>
    <div
      className="rc-tabs-content rc-tabs-content-no-animated"
    >
      <div
        aria-hidden="true"
        className="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="false"
        className="rc-tabs-tabpane rc-tabs-tabpane-active"
        role="tabpanel"
      >
        Second tab
      </div>
      <div
        aria-hidden="true"
        className="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;
